v0.12
	* ADD : menu option to show/hide a selectable relation bounding box
	* ADD : preference option for focus/hover/relations colors
	* ADD : Create one layer per track during GPX import
	* ADD : Info dock for layers
	* ADD : menu option to show/hide scale
	* ADD : "Duplicate", "Apply", "Up", "Down" functionality to the style editor
	* FIX : another try at solving the "long-ways-at-high-zoom-makes-Merkaartor-unusable" problem (closes #1110)
	* ADD : names rendering in styles
	* ADD : save last download layer to MDCs
	* ADD : switch to integer internal coordinates. Coordinates now vary from -INT_MAX to +INT_MAX rather than -M_PI / +M_PI
	* FIX : 412 when uploading joined/splitted roads
	* ADD : layer menu in menubar
	* ADD : display viewport coordinates in status bar
	* ADD : (almost) generalize progress dialogs
	* ADD : support (initial) of GPS devices / NMEA log replay
	* ADD : option to show/hide track segments
	* ADD : option to show/hide non-stylized trackpoints
	* ADD : option to show/hide street names on the map
	* ADD : Render to bitmap via native engine.
	* ADD : Render to SVG via Osmarender (requires libxml2/libxslt; inkscape required to generate bitmap). Closes #694
v0.11
	* ADD : Export to KML
	* ADD : Export to GPX + proper waypoint saving in MDC documents
	* ADD : Shift-Right button to drag-zoom
	* FIX : Qt slows to a crawl when drawing lines offscreen to a large virtual canvas, clipping enabled or not (Qt bug?). Try to optimize roads/track segments drawing to cope with this.
	* FIX : Save also the redo history in a MDC document
	* FIX : Allow deletion of a node from a track without deleting the whole segment
	* FIX : Add a preference option to disable styling for Track layers + re-inject default waypoint painting from dantje 
	* ADD : non-uplodable tags; tags with key beginnig and ending with an underscore ("_") won't be uploaded
	* ADD : ability to commit features from non-uplodable layers to the dirty layer, i.e. make them uploadable